tests/SyntaxError/Test6/test5.c
int main(){


}

int (int a){

return a*2;

}
